Using emojis rather than pictures

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<meta charset="UTF-8">
 <head>
 				 <link rel="stylesheet" href="index.css">
 
@@ -51,14 +51,13 @@
 			 	</div>
 			 	</div>
 			 	<p id="FeaturesP">дополнительные моды для удобства (которые можно отключить)</p>
-			 	<img id="FeaturesImg" src="mods.png">
+			 	<p style="font-size:120px">⚒️</p>
 			 	<p id="FeaturesP">Гибкость настройки</p>
-			 	<img id="FeaturesImg" src="settings.png">
+			 	<p style="font-size:120px">⚙️</p>
 			 	<p id="FeaturesP">Поддержка</p>
-			 	<img id="FeaturesImg" src="Email.png">
+			 	<p style="font-size:120px">📧</p>
 			 	<p id="FeaturesP">Все моды являются open-source проектами и они 100% безопасны</p>
-			 <img id="FeaturesImg" src="code.png">
-			 
+				 <p style=" margin:0px;font-size:120px">🖥️</p>			 
 			 </section>
 			 
 			 <section id="Downloads">
