small emoji fix

--- a/vertukvRU/index.html
+++ b/vertukvRU/index.html
@@ -24,7 +24,7 @@
 		<div>
 		<p>Я разработчик который просто любит компьютеры. На данный момент меня не интересуют какие то крупные проекты и я просто люблю помогать людям и делать маленькие забавные/полезные программы / сайты.</p>
 		<p>Я знаю пару языков программирования и не программирования тоже 😁</p>
-		<p>Хейчу python ибо это интерпритируемый медленный язык 🥱</p>
+		<p>Хейчу python ибо это интерпритируемый медленный язык 🕒</p>
 		<p>Люблю TUI программы и Linux, хейчу keyloggerOS (windows) а код пишу на Mac OS 😎</p>
 		<p>Признаю божественность ARM архитектуры в сравнении с x86 😇</p>
 		<p>Обожаю серверное ПО 💿</p>
