--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	<div class="TopDiv">
 			<div id="DescriptionDiv">
 
-				<h1 id="SmallDescription">agogus555 - Лучшая Minecraft сборка на оптимизацию</h1>
+				<h1 id="SmallDescription">FPS++ - Лучшая Minecraft сборка на оптимизацию</h1>
 				
 			 </div>
 	
 		<section id="Description2Div">
-			<p>agogus555 - Лучшая сборка для оптимизации Minecraft: Java Edition сделанная людьми для людей, не ради денег. Все моды входящие в эту сборку являются свободными и открытыми open-source проектами. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры или даже некоторыми другими оптимизированными клиентами, но не смотря на это вы не потеряете ничего от привычного вам геймплея.</p>
+			<p>FPS++ - Лучшая сборка для оптимизации Minecraft: Java Edition сделанная людьми для людей, не ради денег. Все моды входящие в эту сборку являются свободными и открытыми open-source проектами. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры или даже некоторыми другими оптимизированными клиентами, но не смотря на это вы не потеряете ничего от привычного вам геймплея.</p>
 			 				<a id="ButtonsDiv" href="#Downloads" class="myButton1">Скачать сборку</a>
 
 			 
@@ -52,7 +52,7 @@
 						 <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
 					 </svg>
 				 </div>
-			 	<p id="FeaturesP">Плюсы agogus555:</p>
+			 	<p id="FeaturesP">Плюсы FPS++:</p>
 			 	<p id="FeaturesP">Поддержка множества версий</p>
 			 	<h1 id="Versions">1.14.X - 1.18.X</h1>
 			 	<p id="FeaturesP">Огромный прирост FPS</p>
