--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	 }
 	 
 	function ShowAlert() {
-	 alert ("Пока еще в разработке...");
+	 alert ("Пока еще в разработке... ");
 	 }
 	
 	</script>
@@ -42,7 +42,7 @@
 	
 		<section id="Description2Div">
 			<p>FPS++ - Лучшая сборка для оптимизации Minecraft: Java Edition сделанная людьми для людей. Все моды входящие в эту сборку являются открытыми open-source проектами. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры или даже некоторыми другими оптимизированными клиентами, при этом вы не потеряете ничего от привычного вам геймплея.</p>
-			 				<a id="ButtonsDiv" href="#Downloads" class="myButton1">Скачать сборку</a>
+			 				<a id="ButtonsDiv" href="#Downloads" class="myButton1">К загрузкам</a>
 
 			 
 		</section>
