Remove animated html title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	
 	</script>
 </head>
-<body onload="titleAnimation()">
+<body onload="DISABLEtitleAnimation()">
 	<div id="BodyDiv">
 		
 	<div class="TopDiv">
