added some blank pages and translated page about me
added some blank pages and translated page about me

--- a/vertukv/index.html
+++ b/vertukv/index.html
@@ -19,25 +19,27 @@
 <body onload="titleAnimation()" style="background: black">
 	
 	<div class="WhoAmI">
-		<h1 class="Hi"> Привет 😅</h1>
+		<h1 class="Hi"> Hi 😅</h1>
 		<section class="AboutMe">
 		<div>
-		<p>Я разработчик который просто любит компьютеры. На данный момент меня не интересуют какие то крупные проекты и я просто люблю помогать людям и делать маленькие забавные/полезные программы / сайты.</p>
-		<p>Я знаю пару языков программирования и не программирования тоже 😁</p>
-		<p>Хейчу python ибо это интерпритируемый медленный язык 🕒</p>
-		<p>Люблю TUI программы и Linux, хейчу keyloggerOS (windows) а код пишу на Mac OS 😎</p>
-		<p>Признаю божественность ARM архитектуры в сравнении с x86 😇</p>
-		<p>Обожаю серверное ПО 💿</p>
-		<p>Играю только в блок-гейм (Minecraft) ⛏</p>
+		<p>I am small dev</p>
+		<p id="WhatIdo">I</p>
+		<p>Know some programming and regular languages 😁</p>
+		<p>Hate python because its soo slow 🕒</p>
+		<p>Love TUI apps and linux, but code on mac os</p>
+		<p>Think arm is better than x86</p>
+		<p>Love server software 💿</p>
+		<p>Play block game (Minecraft) ⛏</p>
 		<img id="MinecraftSkin" src="body.png" />
 		</div>
 		
 		</section>
 		<section class="ContactInfo">
-		<h1>Как связаться со мной 📧📲</h1>
-		<p> Discord: vertukv#1060</p>
-		<p> Email: pajtonhacker@gmail.com</p>
-		<p> VK: vk.com/vertukvyoutube</p>
+		<h1>Me on social networks 📧📲</h1>
+		<p> Discord: <a id="ContactInfoLinks">vertukv#1060</a></p>
+		<p> Email: <a id="ContactInfoLinks">pajtonhacker@gmail.com</a></p>
+		<p> VK: <a id="ContactInfoLinks" href="https://vk.com/vertukvyoutube">vertukvyoutube</a></p>
+		<p> Github: <a id="ContactInfoLinks" href="https://github.com/vertukv675">vertukv675</a></p>
 		<div class="custom-shape-divider-bottom-1651503185">
 			<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
 				<path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
