--- a/vertukv/index.html
+++ b/vertukv/index.html
@@ -5,18 +5,10 @@
 	<title> vertukv 🤓</title>
 	<script type="text/javascript">
 	
-	var titleText = document.title;
-	
-	function titleAnimation() {
-	
-	 titleText = titleText.substring(1, titleText.length) + titleText.substring(0, 1);
-	 document.title = titleText;
-	 setTimeout("titleAnimation()", 450);
-	 }
 	
 	</script>
 </head>
-<body onload="titleAnimation()" style="background: black">
+<body onload="" style="background: black">
 	
 	<div class="WhoAmI">
 		<h1 class="Hi"> Hi 😅</h1>
@@ -35,11 +27,11 @@
 		
 		</section>
 		<section class="ContactInfo">
-		<h1>Me on social networks 📧📲</h1>
+		<h1>How to contact me 📧📲</h1>
 		<p> Discord: <a id="ContactInfoLinks">vertukv#1060</a></p>
 		<p> Email: <a id="ContactInfoLinks">pajtonhacker@gmail.com</a></p>
-		<p> VK: <a id="ContactInfoLinks" href="https://vk.com/vertukvyoutube">vertukvyoutube</a></p>
-		<p> Github: <a id="ContactInfoLinks" href="https://github.com/vertukv675">vertukv675</a></p>
+		<p> VK: <a id="ContactInfoLinks" href="https://vk.com/vertukvyoutube" target="_blank">vertukvyoutube</a></p>
+		<p> Github: <a id="ContactInfoLinks" href="https://github.com/vertukv675" target="_blank">vertukv675</a></p>
 		<div class="custom-shape-divider-bottom-1651503185">
 			<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
 				<path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
