--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="UTF-8">
 <head>
 	<link rel="stylesheet" href="index.css">
+	<link rel="manifest" href="site.webmanifest">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
