--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 						<div class="ContactInfo">
 							 <h1>Как связаться с нами:</h1>
 							 <p>VK: vk.com/squarecubing, vk.com/vertukvyoutube</p>
+							 <p>Поговорить с психически неуравновешенным человеком: +79163662674</p>
 							<p>Сайт делал <a id="vertukvButton" href="vertukv/">vertukv</a>, сборку делает Iosif_Stalin1878 </p>
 							<h1>👻</h1>
 						 </div> 
