--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 																				<div>
 																								<div id="ButtonsDiv">
 													   
-																							   <a href="https:/vk.com/squarecubing" class="myButton">agogus228/Iosif_Stalin1878 - автор сборки</a>  
+																							   <a href="https://vk.com/squarecubing" class="myButton">agogus228/Iosif_Stalin1878 - автор сборки</a>  
 																							</div>
 																						   </div>
 																			
