--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 						 <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
 					 </svg>
 				 </div>
-			 				<h1>Скачать: (4.2.0)</h1>
+			 				<h1>Скачать: (4.3.0)</h1>
 			 			<div>
 			 							<div id="ButtonsDiv">
 
-											<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.20.0.zip" class="myButton">1.20.0</a>
+											<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-22w42a.zip" class="myButton">22w42a</a>
 										<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x.zip" class="myButton">1.19.x</a>
 										<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.x.zip" class="myButton">1.18.x</a>
 										<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.17.x.zip" class="myButton">1.17.x</a>
@@ -73,7 +73,7 @@
 
 
 									  
-											<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.20.0-vulkan.zip" class="myButton">1.20.0 vulkan</a>
+										
 								 	<a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip" class="myButton">1.19.x vulkan</a>
 									   <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.2-vulkan.zip" class="myButton">1.18.2 vulkan</a>
 								   </div>
