--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			 </div>
 	
 		<section id="Description2Div">
-			<div id>MercuryMC - сборка для оптимизации Minecraft: Java Edition, созданная для людей, желающих повысить свой FPS. Сборка обладает удобной системой настройки, понятной инструкцией, а также не имеет в себе лишних модов. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры, и при этом ничего не потеряете от привычного Вам геймплея.</p>
+			<div id>MercuryMC - сборка для оптимизации Minecraft: Java Edition. Сборка обладает удобной системой настройки, понятной инструкцией, а также не имеет в себе лишних модов. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры, и при этом ничего не потеряете от привычного Вам геймплея.</p>
 				<a id="myButton2"
 			
 		</section>
@@ -100,7 +100,7 @@
 														 <p id="FeaturesP">• Регулярные обновления</p>
 														 <p id="FeaturesP">• Поддержка vulkan API</p>
 														 <p id="FeaturesP">• Почти полная замена всех функций оптифайна</p>
-														 <p id="FeaturesP">• Все моды являются open source проектами</p>
+														 <p id="FeaturesP">• Почти все моды являются open-source проектами</p>
 														 <p id="FeaturesP"> </p>
 													     <p id="FeaturesP"> </p>
 														
