--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			 </div>
 	
 		<section id="Description2Div">
-			<div id>MercuryMC - сборка для оптимизации Minecraft: Java Edition. Сборка обладает удобной системой настройки, понятной инструкцией, поддержку нескольких графических движков, практически полностью заменяет все функции оптифайна. а также не имеет в себе лишних модов. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры, и при этом ничего не потеряете от привычного Вам геймплея.</p>
+			<div id>MercuryMC - сборка для оптимизации Minecraft: Java Edition. Сборка обладает удобной системой настройки, понятной инструкцией, поддержку нескольких графических API, практически полностью заменяет все функции оптифайна, а также не имеет в себе лишних модов. Вы получите многократный прирост FPS по сравнению с оригинальной версией игры, и при этом ничего не потеряете от привычного Вам геймплея.</p>
 				<a id="myButton2"
 			
 		</section>
