--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet"> 
 	<title>MercuryMC</title>
 	<style>
 		.Emojis{
