--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&display=swap" rel="stylesheet"> 
 	<title>MercuryMC</title>
 	<style>
 		.Emojis{
@@ -136,7 +136,7 @@
 																											<a href="https://vk.com/tsamarin6" class="myButton">shockwavetank - тестировщик сборок</a> 
 																											</div>
 																											
-																											<h1>👻</h1>
+																										
 																											<p></p>
 																											<img class="lolis" src="https://count.getloli.com/get/@mercurymc?theme=rule34" alt="mercurymc" />
 																								   </div>
