--- a/index.html
+++ b/index.html
@@ -42,46 +42,28 @@
     </div>
   </div>
 
-  <section id="Downloads">
-    <h1>Скачать</h1>
-    <div>
-      <div id="DownloadButtonsDiv">
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x+1.19.3.zip"
-          class="myDownloadButton"
-          >1.19.x+1.19.3</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.x.zip"
-          class="myDownloadButton"
-          >1.18.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.17.x.zip"
-          class="myDownloadButton"
-          >1.17.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.16.x.zip"
-          class="myDownloadButton"
-          >1.16.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.12.2.zip"
-          class="myDownloadButton"
-          >1.12.2</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip"
-          class="myDownloadButton"
-          >1.19.x vulkan</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.2-vulkan.zip"
-          class="myDownloadButton"
-          >1.18.2 vulkan</a
-        >
-      </div>
+</section>
+
+<section id="Downloads">
+
+  </div>
+        <h1>Скачать</h1>
+      <div>
+              <div id="ButtonsDiv">
+                <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x+1.19.3.zip" class="myButton">1.19.x+1.19.3</a>
+                <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.x.zip" class="myButton">1.18.x</a>
+                <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.17.x.zip" class="myButton">1.17.x</a>
+                <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.16.x.zip" class="myButton">1.16.x</a>
+                <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.12.2.zip" class="myButton">1.12.2</a>
+
+              </div>
+              <div>
+                <div id="ButtonsDiv">
+
+               <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip" class="myButton">1.19.x vulkan</a>
+                 <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.2-vulkan.zip" class="myButton">1.18.2 vulkan</a>
+               </div>
+     
       <div>
         <section id="Features">
           <h1>Плюсы сборки:</h1>
