--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <div>
       <div id="ButtonsDiv">
         <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x+1.19.3.zip"
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x.zip"
           class="myButton"
-          >1.19.x+1.19.3</a
+          >1.19.x</a
         >
         <a
           href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.x.zip"
