--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       нескольких графических API, не имеет в себе лишних модов, а также
       практически полностью заменяет все функции Optifine. Вы получите
       многократный прирост FPS по сравнению с оригинальной версией игры, и при
-      этом ничего не потеряете от привычного Вам геймплея. 
+      этом ничего не потеряете от привычного Вам геймплея.
     </p>
     <div class="custom-shape-divider-bottom-1651436577">
       <svg
@@ -126,7 +126,7 @@
               <section id="Downloads2">
                 <h1>Контакты:</h1>
                 <div id="ButtonsDiv">
-                  <a href="https://vk.com/squarecubing" class="myButton"
+                  <a href="https://t.me/agogus228" class="myButton"
                     >agogus228/Iosif_Stalin1878 - автор сборки</a
                   >
                 </div>
