--- a/index.html
+++ b/index.html
@@ -53,37 +53,17 @@
           >1.19.x</a
         >
         <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.x.zip"
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip"
           class="myButton"
-          >1.18.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.17.x.zip"
-          class="myButton"
-          >1.17.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.16.x.zip"
-          class="myButton"
-          >1.16.x</a
-        >
-        <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.12.2.zip"
-          class="myButton"
-          >1.12.2</a
+          >1.19.x vulkan</a
         >
       </div>
       <div>
         <div id="ButtonsDiv">
           <a
-            href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip"
+            href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/tag/v5.1.0"
             class="myButton"
-            >1.19.x vulkan</a
-          >
-          <a
-            href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.18.2-vulkan.zip"
-            class="myButton"
-            >1.18.2 vulkan</a
+            >archived versions</a
           >
         </div>
 
