--- a/index.html
+++ b/index.html
@@ -81,14 +81,13 @@
                 <img src="After.png" />
               </div>
             </div>
-            <p id="FeaturesP">• Поддержка множества версий</p>
             <p id="FeaturesP">• Отсутствие лишних модов</p>
             <p id="FeaturesP">• Лёгкость настройки и готовые пресеты</p>
             <p id="FeaturesP">• Регулярные обновления</p>
             <p id="FeaturesP">• Поддержка Vulkan API</p>
             <p id="FeaturesP">• Почти полная замена всех функций Optifine</p>
             <p id="FeaturesP">
-              • Практически все моды являются open-source проектами
+              • Все моды являются open-source проектами
             </p>
 
             <h1>Мы в соц-сетях:</h1>
