--- a/index.html
+++ b/index.html
@@ -65,12 +65,19 @@
             class="myButton"
             >archived versions</a
           >
+          <a
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryExperimental"
+          class="myButton"
+          >experimental version</a
+        >
         </div>
 
         <div>
           <section id="Features">
             <h1>Плюсы сборки:</h1>
             <p id="FeaturesP">• Огромный прирост FPS</p>
+            <p id="FeaturesP">(AMD Phenom 8450 Triple / NVIDIA GeForce GT 630 - vanilla 9 fps, mercurymc 60 fps;</p>
+            <p id="FeaturesP">AMD A10-7850K / AMD Radeon(TM) R7 Graphics - vanilla 10 fps, mercurymc 45 fps)</p>
             <div id="FpsComparisonDiv">
               <div id="FpsComparisonDiv2">
                 <p>С ванильной версией игры:</p>
