--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
   <div id="Description2Div">
     <h1 id="SmallDescription">MercuryMC</h1>
     <p id="SmallDescription">
-      MercuryMC - сборка для оптимизации Minecraft: Java Edition. Сборка
-      обладает удобной системой настройки, понятной инструкцией, поддержку
-      нескольких графических API, не имеет в себе лишних модов, а также
-      практически полностью заменяет все функции Optifine. Вы получите
-      многократный прирост FPS по сравнению с оригинальной версией игры, и при
-      этом ничего не потеряете от привычного Вам геймплея.
+      MercuryMC - сборка для Minecraft: Java Edition, нацеленная на оптимизацию игры. Имеет поддержку vulkan API, практически полностью заменяет все функции OptiFine, а также не имеет лишних модов. Вы получите многократный прирост FPS и при этом ничего не потеряете от привычного геймплея.
     </p>
     <div class="custom-shape-divider-bottom-1651436577">
       <svg
@@ -48,14 +43,14 @@
     <div>
       <div id="ButtonsDiv">
         <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x.zip"
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC.mrpack"
           class="myButton"
-          >1.19.x</a
+          >1.19.3</a
         >
         <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-1.19.x-vulkan.zip"
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC+.mrpack"
           class="myButton"
-          >1.19.x vulkan</a
+          >1.19.3 + OF features</a
         >
       </div>
       <div>
@@ -63,39 +58,17 @@
           <a
             href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/tag/v5.1.0"
             class="myButton"
-            >archived versions</a
+            >1.19.3 + vulkan API</a
           >
           <a
-          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryExperimental"
+          href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/tag/v5.1.0"
           class="myButton"
-          >experimental version</a
+          >1.12.2-1.19.2</a
         >
         </div>
 
         <div>
           <section id="Features">
-            <h1>Плюсы сборки:</h1>
-            <p id="FeaturesP">• Огромный прирост FPS</p>
-            <p id="FeaturesP">(AMD Phenom 8450 Triple / NVIDIA GeForce GT 630 - vanilla 9 fps, mercurymc 60 fps;</p>
-            <p id="FeaturesP">AMD A10-7850K / AMD Radeon(TM) R7 Graphics - vanilla 10 fps, mercurymc 45 fps)</p>
-            <div id="FpsComparisonDiv">
-              <div id="FpsComparisonDiv2">
-                <p>С ванильной версией игры:</p>
-                <img src="vanilla.png" />
-              </div>
-              <div id="FpsComparisonDiv3">
-                <p>С MercuryMC:</p>
-                <img src="After.png" />
-              </div>
-            </div>
-            <p id="FeaturesP">• Отсутствие лишних модов</p>
-            <p id="FeaturesP">• Лёгкость настройки и готовые пресеты</p>
-            <p id="FeaturesP">• Регулярные обновления</p>
-            <p id="FeaturesP">• Поддержка Vulkan API</p>
-            <p id="FeaturesP">• Почти полная замена всех функций Optifine</p>
-            <p id="FeaturesP">
-              • Все моды являются open-source проектами
-            </p>
 
             <h1>Мы в соц-сетях:</h1>
             <div>
@@ -128,7 +101,9 @@
                     >shockwavetank - тестировщик сборок</a
                   >
                 </div>
-
+                <p id="FeaturesP">Более подробную информацию (инструкция по установке, FAQ и т. д.)</p>
+                <p id="FeaturesP">вы можете найти на нашей странице github :)</p>
+                <p id="FeaturesJOPA">сайт по приколу сделан чё вы хотели</p>
                 <div>
                   <img
                     class="lolis"
