--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div>
         <div id="ButtonsDiv">
           <a
-            href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/tag/v5.1.0"
+            href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/releases/latest/download/MercuryMC-vulkan.mrpack"
             class="myButton"
             >1.19.3 + vulkan API</a
           >
