--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
 
                 <div id="ButtonsDiv">
-                  <a href="https://vk.com/tsamarin6" class="myButton"
+                  <a href="https://t.me/shockwave0tank" class="myButton"
                     >shockwavetank - тестировщик сборок</a
                   >
                 </div>
