--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
                     >shockwavetank - тестировщик сборок</a
                   >
                 </div>
-                <p id="FeaturesP">Более подробную информацию (инструкция по установке, FAQ и т. д.)</p>
-                <p id="FeaturesP">вы можете найти на нашей странице github :)</p>
+                <p id="FeaturesP">Более подробную информацию вы можете найти <a href="https://github.com/MercuryMC-Development-Team/MercuryMC-rus/blob/main/README.md">здесь</a> :)</p>
                 <p id="FeaturesJOPA">сайт по приколу сделан чё вы хотели</p>
                 <div>
                   <img
