--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			</p>
 			<hl>MercuryMC</hl>
 			<p id="smalldesc">Сборка для оптимизации Minecraft</p>
+			<p id="smalldesc3">Проект приостановлен!</p>
 		</div>
 	</div>
 	<div class="afterimg"></div>
